infra.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql/mysql-server:8.0
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3306
      #   volumeMounts:
      #   - name: mysql-config-volume
      #     mountPath: /docker-entrypoint-initdb.d/data.sql
      # volumes:
      # - name: mysql-config-volume
      #   hostPath:
      #     path: ./mysql/config.sql
      #     type: File
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:
      containers:
      - name: activemq
        image: rmohr/activemq:5.15.9
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8161
        - containerPort: 61616
        - containerPort: 61613
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: localstack
    template:
      metadata:
        labels:
          app: localstack
      spec:
        containers:
          - name: localstack
            image: localstack/localstack-pro
            ports:
              - containerPort: 4566  # LocalStack Gateway
              - containerPort: 4510-4559  # External services port range
              - containerPort: 53  # DNS config (required for Pro)
              - containerPort: 443  # LocalStack HTTPS Gateway (required for Pro)
            volumeMounts:
              - name: localstack-volume
                mountPath: /var/lib/localstack
              - name: docker-socket
                mountPath: /var/run/docker.sock
        volumes:
          - name: localstack-volume
            hostPath:
              path: "${LOCALSTACK_VOLUME_DIR:-./volume}"
          - name: docker-socket
            hostPath:
              path: /var/run/docker.sock
---
