deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: registry.deti:5000/egs-conv/web-service:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composer
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: composer
  template:
    metadata:
      labels:
        app: composer
    spec:
      containers:
      - name: composer
        image: registry.deti:5000/egs-conv/composer-service:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8888        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversion
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conversion
  template:
    metadata:
      labels:
        app: conversion
    spec:
      containers:
      - name: conversion
        image: registry.deti:5000/egs-conv/conversion-service:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: activemq-secrets
          secret:
            secretName: activemq-secrets
        - name: activemq-configmap
          configMap:
            name: activemq-configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3connector
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3connector
  template:
    metadata:
      labels:
        app: s3connector
    spec:
      containers:
      - name: s3connector
        image: registry.deti:5000/egs-conv/s3connector-service:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: localstack-secrets
          secret:
            secretName: localstack-secrets
        - name: activemq-secrets
          secret:
            secretName: activemq-secrets
        - name: localstack-configmap
          configMap:
            name: localstack-configmap
        - name: activemq-configmap
          configMap:
            name: activemq-configmap
        - name: s3connector-configmap
          configMap:
            name: s3connector-configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: registry.deti:5000/egs-conv/notification-service:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: localstack-secrets
          secret:
            secretName: localstack-secrets
        - name: activemq-secrets
          secret:
            secretName: activemq-secrets
        - name: localstack-configmap
          configMap:
            name: localstack-configmap
        - name: activemq-configmap
          configMap:
            name: activemq-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: egs-conv
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik # app-k3s
  namespace: egs-conv
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app-egs-conv.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port: 
              number: 80
---
