mvp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: composer
  namespace: egs-conv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: composer
  template:
    metadata:
      labels:
        app: composer
    spec:
      containers:
      - name: composer
        image: registry.deti:5000/egs-conv/composer-service:v1
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8888        
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: egs-conv
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: composer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik # app-k3s
  namespace: egs-conv
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: app-egs-conv.k3s
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port: 
              number: 80
---
